Fixed play button on iOS

--- a/src/style/transition.css
+++ b/src/style/transition.css
@@ -49,6 +49,7 @@ body {
   letter-spacing: 0;
   margin-top: 3vh;
   text-align: center;
+  cursor: pointer;
 }
 .blink {
   -webkit-animation: 1s blinkBl step-end infinite;
@@ -232,5 +233,13 @@ audio {
 }
 
 
+a:link{
+  text-decoration:none;
+  font-weight: bold;
+  color:#f2570e;
+}
 
+a:visited{
+  color:#CC6600;
+}
 
